add button and jquery function to change background/text color

--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
+
     <title>Ferret Fun!</title>
   </head>
   <body>
-    <div class="important">
-      <h1>It's like a cat and a dog</h1>
-      <h2>The mascot of Epicodus?</h2>
-      <p><center><img class="pet" src="img/steve.jpg" alt="ferrret"></center></p>
+    <div class="container">
 
-      <p>Don't eat ferrits please</p>
-    </div>
-    <div class="unimportant">
-      <p class="author">Do you know where I can get a ferret sitter?</p>
-      <p><center><img class="pet" src="img/steve2.jpg" alt="ferrret"></center></p>
-
-    </div>
-
-      <p class="spacing">Possible names for my future ferret: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-      <p class="spacing">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Click the button to change background to black with light text!</p>
+        <button class="btn btn-success" id="dark">Dark</button>
 
       <div class="important">
-        <p id="stink">FERRETS DO STINK</p>
+        <h1 id="dark">It's like a cat and a dog</h1>
+        <h2>The mascot of Epicodus?</h2>
+        <p><center><img class="pet" src="img/steve.jpg" alt="ferrret"></center></p>
+
+        <p>Don't eat ferrits please</p>
+      </div>
+      <div class="unimportant">
+        <p class="author">Do you know where I can get a ferret sitter?</p>
+        <p><center><img class="pet" src="img/steve2.jpg" alt="ferrret"></center></p>
+
       </div>
 
-    <ul>
-      <li><strong>Doug</strong>sdfasdfa</li>
-      <li><em>Steve</em>fgdfgsdfg
-      <li>Sarah/Sally<li>George
-    </ul>
-    <p class="author"><a href="mailto:michael@epicodus.com">email</a>
+        <p class="spacing">Possible names for my future ferret: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+        <p class="spacing">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <div class="important">
+          <p id="stink">FERRETS DO STINK</p>
+        </div>
+
+      <ul>
+        <li><strong>Doug</strong>sdfasdfa</li>
+        <li><em>Steve</em>fgdfgsdfg
+        <li>Sarah/Sally<li>George
+      </ul>
+      <p class="author"><a href="mailto:michael@epicodus.com">email</a>
+    </div>
   </body>
 </html>
