add buttons to change background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
       <p>Click the button to change background to black with light text!</p>
         <button class="btn btn-success" id="dark">Dark</button>
+        <button class="btn btn-warning" id="light">Light</button>
 
       <div class="important">
         <h1 id="dark">It's like a cat and a dog</h1>
